#25 fix: 스크롤 오류 해결, head.module.scss z-index 설정

--- a/src/styles/head.module.scss
+++ b/src/styles/head.module.scss
@@ -8,4 +8,5 @@
   backdrop-filter: blur(12px);
   display: flex;
   position: fixed;
+  z-index: 100;
 }
