--- a/src/styles/write.module.scss
+++ b/src/styles/write.module.scss
@@ -4,14 +4,11 @@
   position: relative;
   width: 327px;
   height: 100%;
-  padding-top: 60px;
+  padding-top: 120px;
   margin: 0 24px;
-  overflow-y: auto;
-  z-index: -1;
 
   .selectarea {
     width: 100%;
-    // height: 70px;
     margin-bottom: 24px;
     .category {
       width: 327px;
@@ -31,7 +28,6 @@
 
   .photoarea {
     width: 100%;
-    // height: 98px;
     font-size: 16px;
     line-height: 22px;
     letter-spacing: -0.1px;
@@ -59,7 +55,6 @@
 
   .titlearea {
     width: 100%;
-    // height: 82px;
     margin: 24px 0;
     .title {
       text-align: left;
@@ -88,7 +83,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    padding-bottom: 125px;
+    padding-bottom: 40px;
     .text {
       text-align: left;
       font-size: 16px;
@@ -130,7 +125,7 @@
       font-size: 16px;
       line-height: 22px;
       letter-spacing: -0.1px;
-      color: #3f54d1;
+      color: $brand_blue_200_3F54D1;
       font-weight: bold;
       display: flex;
       justify-content: center;
